<resources>
    <string name="app_name">Affoo</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="launch_screen_title">Affoo</string>
    <string name="launch_welcome">WELCOME</string>
    <string name="use_my_location">Use My Location</string>
    <string name="location">location</string>
    <string name="selected_location">Selected Location</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (Optional)</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_skip">SKIP</string>
    <string name="action_register">Register </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signup">SignUp</string>
    <string name="retype_password">retype password</string>
    <string name="password">password</string>
    <string name="enter_email">Enter Email</string>
</resources>
